--- a/src/app/components/user-drugs/user-drugs.component.html
+++ b/src/app/components/user-drugs/user-drugs.component.html
@@ -8,7 +8,7 @@
   </button>
 
   <div class="row">
-    <div *ngFor="let userDrug of userDrugsList; index as i" class="col-3">
+    <div *ngFor="let userDrug of userDrugsList; index as i" class="col-3 mx-1">
       <div class="card" style="width: 18rem">
         <img
           [src]="'http://localhost:5250/' + userDrug.photos[0].apiPath"
