--- a/src/app/components/drug-req-as-reciever/drug-req-as-reciever.component.html
+++ b/src/app/components/drug-req-as-reciever/drug-req-as-reciever.component.html
@@ -13,7 +13,14 @@
           class="card-img-top"
           style="width: 18rem; height: 18rem"
         />
-        <div class="card-body">
+        <div
+          class="card-body"
+          [ngClass]="{
+            'bg-danger-subtle': drugReq.state === 'Canceled',
+            'bg-success-subtle': drugReq.state === 'Recieved',
+            'bg-info-subtle': drugReq.state === 'Pending'
+          }"
+        >
           <h2 class="card-title">
             {{ drugReq.requestItems[0].userDrug.drug.en_Name }}
           </h2>
