--- a/src/app/components/drug-req-as-doner/drug-req-as-doner.component.html
+++ b/src/app/components/drug-req-as-doner/drug-req-as-doner.component.html
@@ -10,7 +10,13 @@
           class="card-img-top"
           style="width: 18rem; height: 18rem"
         />
-        <div class="card-body">
+        <div
+          class="card-body"
+          [ngClass]="{
+            'bg-danger-subtle': drugReq.state === 'Canceled',
+            'bg-success-subtle': drugReq.state === 'Accepted',
+          }"
+        >
           <h2 class="card-title">
             {{ drugReq.requestItems[0].userDrug.drug.en_Name }}
           </h2>
