--- a/src/app/components/drug-req-as-doner/drug-req-as-doner.component.html
+++ b/src/app/components/drug-req-as-doner/drug-req-as-doner.component.html
@@ -15,6 +15,7 @@
           [ngClass]="{
             'bg-danger-subtle': drugReq.state === 'Canceled',
             'bg-success-subtle': drugReq.state === 'Accepted',
+            'bg-info-subtle': drugReq.state === 'Pending'
           }"
         >
           <h2 class="card-title">
